fix on table.html edit modal: onfocus disappearance of text fixed scrolling on overflow enabled

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -286,6 +286,7 @@ body {
     height: 100%; 
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.5);
+    overflow-y: auto;
   }
 
   #your-placeModal {
